fix: navbar fixed and hero section visible on mobile

--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -25,6 +25,10 @@
   padding-top: 80px;
 }
 
+.hero {
+  margin-top: 70px;
+}
+
 /* Navbar fixed top pe */
 .navbar {
   position: fixed;
@@ -32,7 +36,6 @@
   left: 0;
   width:100%;
   z-index:1000;
-  background-color: white; 
   box-shadow: 0 2px 5px rgba(0,0,0,0.1);
   right: 0;
 }
